--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   },
   "dependencies": {
     "element-ui": "^1.0.0-rc.8",
+    "fetch-jsonp": "^1.0.6",
     "vue": "^2.0.1",
     "vue-resource": "^1.2.1",
     "vue-router": "^2.3.1",
-    "vuex": "^2.2.1"
+    "vuex": "^2.2.1",
+    "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
     "autoprefixer": "^6.4.0",
