--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "chengshuai <492305218@qq.com>",
   "private": true,
   "scripts": {
-    "dev": "node build/dev-server.js",
+    "start": "node build/dev-server.js",
     "build": "node build/build.js",
     "unit": "karma start test/unit/karma.conf.js --single-run",
     "e2e": "node test/e2e/runner.js",
