--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "element-ui": "^1.0.0-rc.8",
     "fetch-jsonp": "^1.0.6",
+    "js-cookie": "^2.1.4",
     "vue": "^2.0.1",
     "vue-resource": "^1.2.1",
     "vue-router": "^2.3.1",
