--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
-    "element-ui": "^1.0.0-rc.8",
+    "element-ui": "^1.3.5",
     "fetch-jsonp": "^1.0.6",
     "js-cookie": "^2.1.4",
-    "vue": "^2.0.1",
+    "vue": "^2.3.3",
     "vue-resource": "^1.2.1",
     "vue-router": "^2.3.1",
     "vuex": "^2.2.1",
@@ -79,7 +79,7 @@
     "sinon-chai": "^2.8.0",
     "style-loader": "^0.16.1",
     "url-loader": "^0.5.7",
-    "vue-loader": "^9.4.0",
+    "vue-loader": "^12.2.1",
     "vue-style-loader": "^1.0.0",
     "webpack": "^1.13.2",
     "webpack-dev-middleware": "^1.8.3",
