--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "element-ui": "^1.3.5",
     "fetch-jsonp": "^1.0.6",
     "js-cookie": "^2.1.4",
+    "moment": "^2.18.1",
     "vue": "^2.3.3",
     "vue-resource": "^1.2.1",
     "vue-router": "^2.3.1",
